--- a/index.html
+++ b/index.html
@@ -6,33 +6,59 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SITE PESSOAL</title>
     <style>
-        .flex-container {
+        .flex-conteiner {
+            
+        }
+        .flex-container2 {
             display: flex;
             justify-content: center;
-            align-items: center;
             text-align: center;
         }
-        .flex-container > h1 {
+        .flex-container2 > h1 {
             width: 320px;
             padding: 10px;
             border: 5px solid azure;
-            margin: 0;
+            margin-top: 185px;
+        }
+        .flex-container2 > div {
+            width: 200px;
+            padding: 100px;
+            border: 5px hidden;
+            color: azure;
+            font-family: "Comic Sans MS", "Comic Sans", fantasy;
+        }
+        .vl {
+                border-left: 6px solid azure;
+                height: 250px;
+                position:absolute;
+                left: 50%;
+                margin-left: -3px;
+                top: 370px;
         }
         h1{
             color: azure;
+            font-family: "Comic Sans MS", "Comic Sans";
         }
         body{
-            background-color: aqua;
+            background-color: rgb(0, 195, 255);
         }
     </style>
 </head>
 <body>
-    <div class="flex-container">
+    <div class="flex-container2">
         <h1>SOBRE MIM</h1>
     </div>
-    <div>
-        <div>QUEM SOU EU?</div>
-        <div>COISAS QUE GOSTO</div>
-    </div> 
+    <div class="flex-container2">
+        <div>QUEM SOU EU?
+            <p>Meu nome é Henrique Coelho Vargas e eu gosto da fonte Comic Sans e de ler livros.</p>
+        </div>
+        <div>COISAS QUE GOSTO:
+            <Ul>
+                <li>Comic Sans</li>
+                <li>Livros</li>
+            </Ul>
+        </div>
+    </div>
+    <div class="vl"></div>
 </body>
 </html>
