--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SITE PESSOAL</title>
     <style>
-        .flex-conteiner {
-            
-        }
         .flex-container2 {
             display: flex;
             justify-content: center;
@@ -42,9 +39,32 @@
         body{
             background-color: rgb(0, 195, 255);
         }
-    </style>
+        #id2 {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            background-color: rgb(41, 41, 41);
+        }
+        li a {
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+            float: left;
+        }
+        li a:hover {
+            background-color:black;
+        }
+</style>
 </head>
 <body>
+    <ul id="id2">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">Galeria</a></li>
+        <li><a href="#contact">Redes Sociais</a></li>
+    </ul>
     <div class="flex-container2">
         <h1>SOBRE MIM</h1>
     </div>
