terminei as outras listas da galeria e fiz algumas mudanças para deixar o site mais estético.

--- a/galeria.html
+++ b/galeria.html
@@ -15,7 +15,7 @@
             padding: 100px;
             color: rgb(41, 41, 41);
             font-family: "Comic Sans MS", "Comic Sans", fantasy;
-            border: 5px solid green;
+            border: 5px solid rgb(41,41,41);
         }
         .flex-container-galary-duck {
         display: flex;
@@ -71,18 +71,16 @@
         <div><h2>LIVROS</h2>
             <div class="flex-container-galary-duck">
                 <div>
-                    <img src="/assets/PATO-DE-LADO.jpg" alt="Foto de um pato de lado" height="200px" width="200px">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQd2D1C57bSY3intpC5vlYxQIJBBefiXqB7Tw&usqp=CAU" alt="Imagem de um pato nadando visto de cima" height="200px">
-                    <img src="https://t2.ea.ltmcdn.com/pt/posts/9/4/9/pato_voa_ou_nao_voa_22949_orig.jpg" alt="Pato de cabeça verde nadando tranquilo na lagoa" height="200px">
+                    <img src="/assets/o mito de sisifo.jfif" alt="imagem da caoa de um livro esciro 'o mito de sísifo'" height="200px">
+                    <img src="/assets/crime-e-castigo.jpg" alt="Imagem de um pato nadando visto de cima" height="200px">
+                    <img src="https://m.media-amazon.com/images/I/51qDrYyla9L.jpg" alt="Pato de cabeça verde nadando tranquilo na lagoa" height="200px">
                 </div>
             </div>
         </div>
         <div><h2>COMIC SANS</h2>
             <div class="flex-container-galary-duck">
                 <div>
-                    <img src="/assets/PATO-DE-LADO.jpg" alt="Foto de um pato de lado" height="200px" width="200px">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQd2D1C57bSY3intpC5vlYxQIJBBefiXqB7Tw&usqp=CAU" alt="Imagem de um pato nadando visto de cima" height="200px">
-                    <img src="https://t2.ea.ltmcdn.com/pt/posts/9/4/9/pato_voa_ou_nao_voa_22949_orig.jpg" alt="Pato de cabeça verde nadando tranquilo na lagoa" height="200px">
+                    <img src="https://www.actionfonts.com/fonts/generator/temp/comic-sans-ms-1677171184.png" alt="Foto de um pato de lado" height="200px" width="400px">
                 </div>
             </div>
         </div>
