fiz algumas melhorias visando responsividade.

--- a/galeria.html
+++ b/galeria.html
@@ -11,18 +11,19 @@
             flex-direction: column;
         }
         .flex-container-body > div {
-            width: 1013px;
+            width: 82,9%;
             padding: 100px;
             color: rgb(41, 41, 41);
             font-family: "Comic Sans MS", "Comic Sans", fantasy;
-            border: 5px solid rgb(41,41,41);
+            border: 5px solid rgb(41, 41, 41);
         }
         .flex-container-galary-duck {
-        display: flex;
-        
+            display: flex;
+            width: 90%;
+            justify-content: center;
         }
-        .flex-container-galary-duck > div {
-            border: solid tomato;
+        img{
+            border: solid rgb(41, 41, 41);
         }
         #id2 {
             list-style-type: none;
@@ -49,7 +50,7 @@
         }
         li img {
             border: 5px solid rgb(41, 41, 41);
-        }
+        }   
     </style>
 </head>
 <body>
