criei uma nova página como meu email e mudei o background de duas páginas.

--- a/galeria.html
+++ b/galeria.html
@@ -45,7 +45,7 @@
             background-color:black;
         }
         body {
-            background: url(background\ site1.png) no-repeat;
+            background: url(backgound-galeria.png) no-repeat;
             background-size: cover;
         }
         li img {
@@ -54,11 +54,11 @@
     </style>
 </head>
 <body>
-    <ul id="id2">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="">Contatos</a></li>
-    </ul>
+        <ul id="id2">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
+            <li><a href="contatos.html">Contatos</a></li>
+        </ul>
     <div class="flex-container-body">
         <div><h2>FOTOS DE PATOS</h2>
             <div class="flex-container-galary-duck">
