ultimos ajustes nos backgrounds

--- a/contatos.html
+++ b/contatos.html
@@ -33,7 +33,7 @@
         }
         body{
             font-family: "Comic Sans MS", "Comic Sans";
-            background: url(background-contatos.png);
+            background: url(background-contatos.png)no-repeat;
             background-size: cover;
         }
     </style>
