--- a/galeria.html
+++ b/galeria.html
@@ -45,7 +45,7 @@
             background-color:black;
         }
         body {
-            background: url(backgound-galeria.png) no-repeat;
+            background: url(background-galeria.png)no-repeat;
             background-size: cover;
         }
         li img {
